# data-format-lab

./: .gitignore  AGENTS.md  CONTEXT.md  DATA_NOTICE.md  README.ja.md  README.md  diagnostic-triage.toml  flake.nix  pyproject.toml
.github/workflows/: benchmark-fastlanes.yml  benchmark-linux.yml  benchmark-native.yml  ci.yml  coverage.yml  diagnostic-triage-observe.yml  review-closeout.yml
datasets/geonames-cities500/: DATA_CARD.md  fixture.csv  manifest.json
datasets/github-stars-2026-07-03/: DATA_CARD.md  fixture.csv  manifest.json
datasets/nyc-311-2010-2019/: DATA_CARD.md  fixture.csv  manifest.json
datasets/owid-energy/: DATA_CARD.md  fixture.csv  manifest.json
datasets/uci-bank-marketing/: DATA_CARD.md  fixture.csv  manifest.json
datasets/uci-online-retail-ii/: DATA_CARD.md  fixture.csv  manifest.json
docs/: format-selection.md  native-robustness.md  research-log.md
docs/adr/: 0001-separate-benchmark-lanes.md  0002-separate-conformance-and-robustness.md  0003-equivalence-lane.md  0004-diagnostic-triage-contracts.md
docs/agents/: domain.md  equivalence-task-map.md  issue-tracker.md  review-closeout-labels.json
docs/audits/2026-07-19/: audit.json  issue-map.json  report.md  ui-readback.json
docs/diagnostic-triage/: taxonomy.md
docs/specs/: equivalence-v1.md  equivalence-v2.md  measurement-estimand-v1.md  robustness-v1.md
experiments/tsfile/: README.md
reports/revalidation-2026-07-17/macos-arm64/: arrow-ipc-codecs.md  arrow-ipc.md  parquet-codecs.md
reports/v0.1.0/: README.md
reports/v0.1.0/linux-x86_64/: claims.md  fair.md  prompt.md
reports/v0.1.0/macos-arm64/: claims.md  fair.md  prompt.md
research/: README.md
research/formats/: anyblox.json  fastlanes.json  nimble.json
research/probes/: nimble-dependency-closure.json
schemas/diagnostic-triage/v1/: finding.schema.json
src/format_bench/: __init__.py  adapter_contract.py  arrow_compute.py  artifact_digest.py  canonical.py  cli.py  contracts.py  dataset_sources.py  datasets.py  equivalence.py  equivalence_admission.py  equivalence_compare.py  equivalence_run.py  fair.py  fair_run.py  implementation_audit.py  interop.py  interop_worker.py  json_contract.py  model.py  nyc_snapshot.py  profile_run.py  prompt.py  registry.py  release.py  report.py  research.py  robustness_worker_bootstrap.py  runner.py  shards.py  worker.py  worker_limits.py  workflow.py  workflow_contract.py  workload_contract.py  workloads.py
src/format_bench/claims/: __init__.py  fastlanes.py  fastlanes_worker.py  tsfile.py  vortex.py
src/format_bench/formats/: __init__.py  arrow_extra.py  arrow_ipc.py  base.py  database.py  lance.py  parquet.py  row.py  text.py  tsfile.py  vortex.py
tests/: test_adapter_contract.py  test_arrow_compute.py  test_arrow_ipc_adapter.py  test_arrow_ipc_interoperability.py  test_artifact_digest.py  test_audit_github.py  test_audit_tracker.py  test_canonical.py  test_claims_import.py  test_coverage_workflow.py  test_dataset_contract.py  test_dataset_fixtures.py  test_dataset_manifest.py  test_dataset_sources.py  test_datasets.py  test_diagnostic_triage_consumer.py  test_diagnostic_triage_contracts.py  test_equivalence.py  test_equivalence_adapters.py  test_equivalence_run.py  test_fair.py  test_fair_run.py  test_fastlanes_claim.py  test_fastlanes_workflow.py  test_format_selection.py  test_implementation_audit.py  test_json_contract.py  test_lance_adapter.py  test_model.py  test_native_workflow.py  test_nyc_snapshot.py  test_package_version.py  test_parquet_adapter.py  test_profile_run.py  test_prompt.py  test_readme_parity.py  test_release.py  test_report.py  test_research.py  test_revalidation_aggregate.py  (+20 more)
tests/typecheck/: adapter_manifest_normalized.py
tools/: audit_github.py  audit_project.py  audit_tracker.py  build_revalidation_aggregate.py  ci_smoke.sh  finalize_revalidation.sh  github_labels.py  review_closeout.py  review_closeout_labels.py
(+15 files in other folders)
