[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "format-bench"
dynamic = ["version"]
description = "Evidence-first benchmarks for data formats and format-native claims"
requires-python = "==3.12.*"
dependencies = [
  "cbor2==5.9.0",
  "duckdb==1.4.3",
  "fastavro==1.12.1",
  "msgpack==1.2.1",
  "openpyxl==3.1.5",
  "pyarrow==23.0.1",
  "pylance==8.0.0",
  "tiktoken==0.12.0",
  "vortex-data==0.76.0",
  "zstandard==0.25.0",
]

[project.scripts]
format-bench = "format_bench.cli:main"

[project.optional-dependencies]
research = ["pyfastlanes==0.1.3.post9"]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/format_bench"]

[tool.hatch.version]
path = "src/format_bench/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"
root = ["./src", "./tools"]

[tool.ty.analysis]
allowed-unresolved-imports = ["pyfastlanes", "tsfile"]

[tool.ty.src]
include = ["src/format_bench", "tools"]

[tool.pyright]
include = [
  "src/format_bench/artifact_digest.py",
  "src/format_bench/arrow_compute.py",
  "src/format_bench/contracts.py",
  "src/format_bench/equivalence.py",
  "src/format_bench/json_contract.py",
  "src/format_bench/model.py",
  "src/format_bench/nyc_snapshot.py",
  "src/format_bench/research.py",
  "src/format_bench/workflow_contract.py",
  "src/format_bench/robustness/evidence.py",
  "src/format_bench/robustness/mutations.py",
  "src/format_bench/robustness/paths.py",
  "src/format_bench/robustness/runner.py",
  "tools/audit_tracker.py",
  "tools/audit_github.py",
  "tools/audit_project.py",
  "tools/review_closeout.py",
  "tools/review_closeout_labels.py",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
